src/test/ui/issue-42106.stderr
error[E0502]: cannot borrow `*collection` as mutable because `collection` is also borrowed as immutable
  --> $DIR/issue-42106.rs:13:5
   |
LL |     let _a = &collection;
   |               ---------- immutable borrow occurs here
LL |     collection.swap(1, 2); //~ ERROR also borrowed as immutable
   |     ^^^^^^^^^^ mutable borrow occurs here
LL | }
   | - immutable borrow ends here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0502"
